--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,12 +2,14 @@ version: '3'
 
 services:
   app:
-    container_name: 'shift-python-2024'
+    container_name: 'transaction-service'
     build:
       context: app/
       dockerfile: Dockerfile
     volumes:
       - ..:/workspace:cached
+      - ${SSH_KEY_PATH}/id_rsa:/root/.ssh/id_rsa
+      - ${SSH_KEY_PATH}/id_rsa.pub:/root/.ssh/id_rsa.pub
     ports:
       - '28080:8080'
     command: sleep infinity
