--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    container_name: 'transaction-service'
+    container_name: 'transaction_service_ivashko'
     build:
       context: app/
       dockerfile: Dockerfile
