Обернута логика в эндпоинты и отредактирован flake_ignore

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,4 @@ run_linter:
     - pip install poetry
     - poetry install
   script:
-    - poetry run flake8 src/app
+    - poetry run flake8 src/app/transaction.py
