--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11.2"
 fastapi = "^0.111.1"
 uvicorn = "^0.30.5"
+alembic = "^1.13.2"
 
 [tool.poetry.group.dev.dependencies]
 wemake-python-styleguide = "^0.19.2"
