--- a/alembic.ini
+++ b/alembic.ini
@@ -60,8 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:password@postgres:5432/card_app
-
+sqlalchemy.url = postgresql+psycopg2://username:password@postgres-service:5432/iivashko
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
