--- a/kuber/service-transactions.yaml
+++ b/kuber/service-transactions.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: transaction-service
+  name: ivashko-transaction-service
   namespace: test
 spec:
   selector:
