--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,17 +2,17 @@ default:
   image: python:3.12-bookworm
 
 stages:
-  #- test
+  - test
   - lint
 
-# run_tests:
-#   stage: test
-#   before_script:
-#     - pip install poetry
-#     - poetry install
-#   script:
-#     - export PYTHONPATH=$PYTHONPATH:/builds/shift-python/y2024/homeworks/iivashko/transaction-service/src
-#     - poetry run pytest -v
+run_tests:
+  stage: test
+  before_script:
+    - pip install poetry
+    - poetry install
+  script:
+    - export PYTHONPATH=$PYTHONPATH:/builds/shift-python/y2024/homeworks/iivashko/transaction-service/src
+    - poetry run pytest -v
 
 run_linter:
   stage: lint
